# tt-bootcamp

./: .gitignore  Makefile  README.md  analyze.py  columnar.py  datagen.py  delimiter.py  fix-length.py  hello.py  pyproject.toml  read-fixlength.py  read-json.py
just_enough_python/: Makefile  README.md  basics.py  bools.py  clazz.py  comprehension.py  conditionals.py  dicts.py  func.py  func_ds.py  function_passing.py  lambda_func.py  lists.py  loops.py  poorman-db.py  pyproject.toml  string0.py
mapred/: Makefile  avg_word_length.py  gendata.py  map1.py  reduce0.py  shuffler.py
week2/: Makefile
week2/monday/: knn.py  nb.py
week2/sunday/: a_good_args.py  create_netflix.sql  fileops.py  mymath.py  pyduck.py  sniffing.py  special_func.py
week2/sunday/template/: aggr.sql
week2/tuesday/: reg.py
week2/wednesday/: high-level-ml.ipynb  low-level-mllib-Copy1.ipynb
week2/wednesday/wedo/: README.md
you_do_1/: Makefile  README.md  sezaiufukoral.py
