[project]
name = "tt-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.1.3",
    "faker>=35.0.0",
    "ipython>=8.31.0",
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "ruff>=0.9.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
]

[tool.uv.workspace]
members = ["jepython"]
